# energy-company-python

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app_initializer.py  db.py  main.py
src/controller/: electricity_reading_controller.py  price_plan_comparator_controller.py
src/repository/: electricity_reading_repository.py  price_plan_repository.py  smart_meter_repository.py
src/service/: electricity_reading_service.py  price_plan_service.py
src/system/: routes.py
tests/: conftest.py
tests/controller/: test_electricityReadingController.py  test_pricePlanComparatorController.py
tests/domain/: test_PricePlan.py
tests/repository/: test_electricityReadingRepository.py
tests/service/: test_ElectricityReadingService.py  test_PricePlanService.py  test_TimeConverter.py
